# embedded-threadsafe-rust

./: Cargo.toml  README.md
embedded-singletons/: Cargo.toml  README.md
embedded-singletons-rp2040/: Cargo.toml  README.md
embedded-singletons-rp2040/src/: lib.rs  runtime.rs
embedded-singletons/src/: lazy.rs  lib.rs  runtime.rs  singleton.rs
embedded-singletons/src/singletons/: interrupt.rs  local.rs  mod.rs  shared.rs
embedded-threadsafe/: Cargo.toml  README.md
embedded-threadsafe-rp2040/: Cargo.toml  README.md
embedded-threadsafe-rp2040/src/: lib.rs  runtime.rs
embedded-threadsafe/src/: lazy.rs  lib.rs  runtime.rs
embedded-threadsafe/src/safecells/: interrupt.rs  local.rs  mod.rs  shared.rs
