[package]
name = "embedded-singletons-rp2040"
version = "0.1.0"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "Provides global or thread-global singletons for embedded devices, with predefined runtime functions for the rp2040"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/embedded-singletons-rust"
readme = "README.md"


[badges]


[features]
default = []


[dependencies]
# FIXME
embedded-singletons = { path = "../embedded-singletons" }
critical-section = "1.1.1"
cortex-m = "0.7.7"
rp2040-hal = "0.8.1"


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
