[package]
name = "embedded-singletons"
version = "0.1.0"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "Provides global or thread-global singletons for embedded devices"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/embedded-singletons-rust"
readme = "README.md"


[badges]


[features]
default = []


[dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
