[package]
name = "embedded-threadsafe-rp2040"
version = "0.2.2"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "Provides safe global or thread-local cells for embedded devices, with predefined runtime hooks for the rp2040"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/embedded-threadsafe-rust"
readme = "README.md"


[badges]


[features]
default = []


[dependencies]
# FIXME
embedded-threadsafe = { git = "https://github.com/KizzyCode/embedded-threadsafe-rust", version = "0.2.2" }
critical-section = "1.1.1"
cortex-m = "0.7.7"
rp2040-hal = "0.8.2"


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
