[package]
name = "embedded-threadsafe"
version = "0.2.3"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "Provides safe global or thread-local cells for embedded devices"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/embedded-threadsafe-rust"
readme = "README.md"


[badges]


[features]
default = []


[dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
